--- a/.github/workflows/monitor.yml
+++ b/.github/workflows/monitor.yml
@@ -13,4 +13,4 @@ jobs:
       - uses: actions/checkout@v2
       - name: 'Check on server'
         working-directory: utils/dev
-        run: ls
+        run: ./page_if_server_down.sh
