--- a/clients/linux/Cargo.toml
+++ b/clients/linux/Cargo.toml
@@ -20,3 +20,4 @@ serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.8"
 sourceview = "0.9.0"
 uuid = { version = "0.8.1", features = ["v4", "serde"] }
+base64 = "0.11.0"
