--- a/containers/test.env
+++ b/containers/test.env
@@ -8,6 +8,8 @@ FILES_DB_BUCKET=testbucket
 FILES_DB_ACCESS_KEY=minioadmin
 FILES_DB_SECRET_KEY=minioadmin
 
+DURATION_BETWEEN_METRICS_REFRESH=5000
+
 API_URL=http://lockbook_server:8000
 SERVER_SCHEME=http
 SERVER_HOST=lockbook_server
