--- a/server/server/Cargo.toml
+++ b/server/server/Cargo.toml
@@ -32,6 +32,7 @@ tokio = { version = "1.5.0", features = ["full"] }
 uuid = { version = "0.8.1", features = ["v4", "serde"] }
 libsecp256k1 = "0.7.0"
 prometheus = "0.13.0"
+prometheus-static-metric = "0.5.1"
 lazy_static = "1.4.0"
 deadpool-redis = "0.10.1"
 redis = { version = "0.21", default-features = false, features = ["tokio-comp"] }
