--- a/containers/test.env
+++ b/containers/test.env
@@ -13,6 +13,10 @@ STRIPE_SIGNING_SECRET="" #get value from stripe cli or dashboard
 STRIPE_PREMIUM_PRICE_ID=price_1KGVCUBVvvKoCGaYriiYIoXs
 MILLIS_BETWEEN_PAYMENT_FLOWS=0
 
+GOOGLE_PLAY_PREMIUM_SUBSCRIPTION_PRODUCT_ID=app.lockbook.premium_subscription
+GOOGLE_PLAY_PREMIUM_SUBSCRIPTION_OFFER_ID=monthly
+GOOGLE_CLOUD_PUBSUB_NOTIFICATION_TOKEN=8000
+
 MINUTES_BETWEEN_METRICS_REFRESH=5
 MILLIS_BETWEEN_REDIS_CALLS=100
 
