--- a/clients/android/app/build.gradle
+++ b/clients/android/app/build.gradle
@@ -98,6 +98,7 @@ dependencies {
 
     // Miscellaneous
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:$json_parser_version"
+//    implementation "org.jetbrains.kotlinx:kotlinx-serialization-cbor$json_parser_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_reflect"
     implementation "com.journeyapps:zxing-android-embedded:$qr_embedded_version"
     implementation "com.google.zxing:core:$qr_core_version"
@@ -108,6 +109,7 @@ dependencies {
     implementation "androidx.work:work-runtime-ktx:$work_version"
     implementation "com.github.tingyik90:snackprogressbar:$snackprogressbar_version"
     implementation "com.android.billingclient:billing:$billing_version"
+    implementation "com.github.MikeOrtiz:TouchImageView:$image_viewer_version"
 
     implementation project(':core')
 }
