--- a/containers/docker-compose-integration-tests.yml
+++ b/containers/docker-compose-integration-tests.yml
@@ -27,6 +27,8 @@ services:
     image: server:$HASH
     env_file:
       - ../containers/test.env
+    environment:
+      GOOGLE_CLOUD_SERVICE_ACCOUNT_KEY: ${GOOGLE_CLOUD_SERVICE_ACCOUNT_KEY}
     depends_on:
       - config_filesdb
       - indexdb
