--- a/clients/linux/lb-api/Cargo.toml
+++ b/clients/linux/lb-api/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2021"
 lockbook-core = { path = "../../../core" }
 lockbook-models = { path = "../../../core/libs/models" }
 uuid = { version = "0.8.1", features = ["v4", "serde"] }
+fuzzy-matcher = "0.3.7"
