--- a/clients/android/app/src/main/AndroidManifest.xml
+++ b/clients/android/app/src/main/AndroidManifest.xml
@@ -29,10 +29,10 @@
         </activity>
         <activity android:name=".screen.CaptureActivityAutoRotate"
             android:theme="@style/AppTheme.QRCapture"
-            android:screenOrientation="fullSensor"
-            tools:replace="screenOrientation" />
+            android:screenOrientation="fullSensor" />
         <activity
-            android:name=".screen.OnBoardingActivity" />
+            android:name=".screen.OnBoardingActivity"
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".screen.ImportAccountActivity" />
         <activity android:name=".screen.MainScreenActivity" />
