--- a/clients/android/app/src/main/AndroidManifest.xml
+++ b/clients/android/app/src/main/AndroidManifest.xml
@@ -28,14 +28,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".screen.OnBoardingActvity" />
-        <activity
-            android:name=".screen.ImportAccountActivity" />
+        <activity android:name=".screen.OnBoardingActivity" />
+        <activity android:name=".screen.ImportAccountActivity" />
         <activity android:name=".screen.MainScreenActivity" />
         <activity android:name=".screen.SettingsActivity" />
         <activity android:name=".screen.LogActivity" />
-
+        <activity android:name=".screen.UpgradeAccountActivity"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity" />
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="app.lockbook.fileprovider"
