--- a/clients/android/build.gradle
+++ b/clients/android/build.gradle
@@ -37,13 +37,13 @@ buildscript {
         billing_version = '4.1.0'
         image_viewer_version = '3.2.0'
         pdf_viewer_version = '3.2.0-beta.3'
+        billing_version = '5.0.0'
     }
 
     repositories {
         google()
         mavenCentral()
         maven { url "https://plugins.gradle.org/m2/" }
-        gradlePluginPortal()
     }
 
     dependencies {
