--- a/server/server/Cargo.toml
+++ b/server/server/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "lockbook-server"
-version = "0.4.1"
+version = "0.4.2"
 edition = "2018"
 build = "build.rs"
 
@@ -38,6 +38,8 @@ redis = { version = "0.21", default-features = false, features = ["tokio-comp"] 
 redis_utils = "0.1.3"
 async-stripe = { git = "https://github.com/arlyon/async-stripe", default-features = true, features = ["runtime-tokio-hyper-rustls"] }
 sha2 = "0.10.2"
+google-androidpublisher3 = "3.1.0"
+constant_time_eq = "0.2.2"
 
 [build-dependencies]
 shadow-rs = "0.6.2"
