--- a/core/libs/test_utils/Cargo.toml
+++ b/core/libs/test_utils/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 lockbook-core = { path = "../../" }
 lockbook-models = { path = "../models" }
 hmdb = "0.1.12"
+bincode = "1.3.3"
 itertools = "0.10.1"
 chrono = "0.4.15"
 uuid = { version = "0.8.1", features = ["v4", "serde"] }
