--- a/server/server/Cargo.toml
+++ b/server/server/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "lockbook-server"
-version = "0.4.3"
+version = "0.5.0"
 edition = "2018"
 build = "build.rs"
 
@@ -23,7 +23,6 @@ lockbook-crypto = { path = "../../core/libs/crypto" }
 lockbook-models = { path = "../../core/libs/models" }
 log = "0.4.8"
 pagerduty-rs = { version = "0.1.5", default-features = false, features = ["async", "rustls"] }
-rust-s3 = { version = "0.27.0-rc3", default-features = false, features = ["tokio-rustls-tls"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.44"
 shadow-rs = "0.6.2"
@@ -33,13 +32,11 @@ libsecp256k1 = { git = "https://github.com/steverusso/libsecp256k1" }
 prometheus = "0.13.0"
 prometheus-static-metric = "0.5.1"
 lazy_static = "1.4.0"
-deadpool-redis = "0.10.1"
-redis = { version = "0.21", default-features = false, features = ["tokio-comp"] }
-redis_utils = "0.1.3"
 async-stripe = { git = "https://github.com/arlyon/async-stripe", default-features = true, features = ["runtime-tokio-hyper-rustls"] }
 sha2 = "0.10.2"
 google-androidpublisher3 = "3.1.0"
 constant_time_eq = "0.2.2"
+hmdb = "0.1.12"
 
 [build-dependencies]
 shadow-rs = "0.6.2"
