--- a/clients/cli/Cargo.toml
+++ b/clients/cli/Cargo.toml
@@ -10,8 +10,8 @@ path = "src/main.rs"
 [dependencies]
 lockbook-core = { path = "../../core" }
 structopt = "0.3.13"
-serde_json = "1.0.44"
 chrono = "0.4"
 qr2term = "0.3.0"
 hotwatch = "0.4.5"
 atty = "0.2"
+dialoguer = { version = "0.10.1", features = ["fuzzy-select"] }
