--- a/clients/cli/Cargo.toml
+++ b/clients/cli/Cargo.toml
@@ -15,3 +15,4 @@ qr2term = "0.3.0"
 hotwatch = "0.4.5"
 atty = "0.2"
 dialoguer = { version = "0.10.1", features = ["fuzzy-select"] }
+indicatif = "0.16.2"
