--- a/utils/dev/snap-packages/lockbook/snap/snapcraft.yaml
+++ b/utils/dev/snap-packages/lockbook/snap/snapcraft.yaml
@@ -7,17 +7,18 @@ description: |
 grade: stable
 confinement: strict
 
+parts:
+  lockbook:
+    plugin: rust
+    source: https://github.com/lockbook/lockbook.git
+    source-tag: 0.4.3
+    build-packages:
+      - git
+    rust-path: ["clients/cli"]
+
 apps:
   lockbook:
     command: bin/lockbook
     plugs:
       - network
       - home
-
-parts:
-  lockbook:
-    plugin: rust
-    source: https://github.com/lockbook/lockbook.git
-    build-packages:
-      - git
-    rust-path: ["clients/cli"]
