--- a/server/server/Cargo.toml
+++ b/server/server/Cargo.toml
@@ -17,7 +17,6 @@ warp = { version = "0.3.2", features = ["tls"]}
 base64 = "0.13.0"
 bincode = "1.2.1"
 chrono = "0.4.15"
-fern = { version = "0.6.0", features = ["colored"]}
 futures = "0.3.13"
 lockbook-crypto = { path = "../../core/libs/crypto" }
 lockbook-models = { path = "../../core/libs/models" }
@@ -37,6 +36,9 @@ sha2 = "0.10.2"
 google-androidpublisher3 = "3.1.0"
 constant_time_eq = "0.2.2"
 hmdb = "0.1.12"
+tracing = "0.1.5"
+tracing-subscriber = "0.3.9"
+tracing-appender = "0.2"
 
 [build-dependencies]
 shadow-rs = "0.6.2"
