--- a/clients/linux/Cargo.toml
+++ b/clients/linux/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.4.3"
 edition = "2021"
 
 [dependencies]
-lb = { package = "lb-api", path = "./lb-api" }
+lb = { package = "lockbook-core", path = "../../core" }
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.8"
 gtk = { package = "gtk4", version = "0.4.8", features = ["v4_6"] }
