--- a/core/libs/models/Cargo.toml
+++ b/core/libs/models/Cargo.toml
@@ -10,7 +10,7 @@ rand = "0.8.4"
 http = "0.2.6"
 serde = { version = "1.0", features = ["derive"] }
 serde_bytes = "0.11"
-libsecp256k1 = { git = "https://github.com/steverusso/libsecp256k1" }
+libsecp256k1 = "0.7.1"
 uuid = { version = "0.8.1", features = ["v4", "serde"] }
 
 [dev-dependencies]
