--- a/core/libs/shared/Cargo.toml
+++ b/core/libs/shared/Cargo.toml
@@ -12,6 +12,11 @@ serde = { version = "1.0", features = ["derive"] }
 serde_bytes = "0.11"
 libsecp256k1 = { git = "https://github.com/steverusso/libsecp256k1" }
 uuid = { version = "0.8.1", features = ["v4", "serde"] }
+aead = "0.4.2"
+aes-gcm = "0.9.3"
+bincode = "1.2.1"
+sha2 = "0.9.0"
+hmac = "0.11.0"
 
 [dev-dependencies]
 bincode = "1.2.1"
