--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -46,6 +46,7 @@ lazy_static = "1.4.0"
 lockbook-models = { path = "libs/models" }
 lockbook-crypto = { path = "libs/crypto" }
 sublime_fuzzy = "0.7.0"
+crossbeam = "0.8.1"
 
 [profile.release]
 debug = true
