--- a/core/libs/shared/Cargo.toml
+++ b/core/libs/shared/Cargo.toml
@@ -19,6 +19,7 @@ sha2 = "0.9.0"
 hmac = "0.11.0"
 hmdb = { path = "../../../../../hmdb" }
 tracing = "0.1.5"
+flate2 = "1.0"
 
 [dev-dependencies]
 bincode = "1.2.1"
