--- a/core/libs/test_utils/Cargo.toml
+++ b/core/libs/test_utils/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 lockbook-core = { path = "../../" }
 lockbook-shared = { path = "../shared" }
-hmdb = "0.1.12"
+hmdb = { path = "../../../../../hmdb" }
 bincode = "1.3.3"
 itertools = "0.10.1"
 chrono = "0.4.15"
