--- a/utils/dev-tool/Cargo.toml
+++ b/utils/dev-tool/Cargo.toml
@@ -9,3 +9,6 @@ edition = "2021"
 structopt = "0.3.13"
 port_scanner = "0.1.5"
 dotenv = "0.15.0"
+execute-command-macro = "0.1.8"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0.83"
