--- a/containers/Dockerfile.core
+++ b/containers/Dockerfile.core
@@ -12,6 +12,7 @@ COPY rustfmt.toml .
 COPY core/Cargo.toml .
 COPY core/libs/shared/Cargo.toml libs/shared/.
 COPY containers/dummy.rs libs/test_utils/src/lib.rs
+COPY containers/dummy.rs libs/shared/src/lib.rs
 COPY core/libs/test_utils/Cargo.toml libs/test_utils/.
 RUN mkdir benches/
 RUN touch benches/bench_main.rs
