--- a/server/server/Cargo.toml
+++ b/server/server/Cargo.toml
@@ -37,6 +37,7 @@ hmdb = "0.1.13"
 tracing = "0.1.5"
 tracing-subscriber = "0.3.9"
 tracing-appender = "0.2"
+itertools = "0.10.1"
 
 [build-dependencies]
 shadow-rs = "0.6.2"
